--- a/projects/trails.html
+++ b/projects/trails.html
@@ -113,9 +113,11 @@ when interacting with a new mobile device by showing users trails from other use
 
 <p>This project will involve working with Android and, eventually, crowd sourcing platforms. 
 First, you will develop a system that collects user interactions and is able to extract common interaction trails in different applications. 
-Secondly, you will assess if and how different users groups produce different trails (e.g. novice vs expert, blind vs sighted) and explore ways to present interaction trails to different user groups.
-Finnally, together with the team members you will integrate crowd source tecnhology (e.g. generating and tagging trails).
+Secondly, you will assess if and how different users groups produce different trails (e.g. novice vs. expert, blind vs. sighted) and explore ways to present interaction trails to different user groups.
+Finally, together with the team members you will integrate crowd source technology (e.g. generating and tagging trails).
 You will work closely with end users (e.g. blind) to assess if and how trails facilitate user interaction and learning process.</p>
+
+<p>The student working on this project will work in close collaboration with André Rodrigues, a PhD student, that is working on ways to improve the usage and learning of mobile devices by novice users and those with different abilities. This project is done in collaboration with researchers from the University of Newcastle, UK, and Técnico, University of Lisbon.</p>
 
 <h3 id="related-publications">Related Publications</h3>
 
